Fix dl not showing for blank value

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -40,6 +40,13 @@ footer {
     height: 63px;
 }
 
+//Fix empty dl values not beign displayed correctly
+.dl-horizontal > dd:after {
+  display: table;
+  content: "";
+  clear: both;
+}
+
 /* miscellaneous */
 
 .debug_dump {
